force-app/main/default/objects/Eversign_Document_Field_Mapping__mdt/Eversign_Document_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Eversign Document Field Mapping</label>
    <pluralLabel>Eversign Document Field Mappings</pluralLabel>
</CustomObject>