force-app/main/default/objects/Eversign_Document_Field_Mapping__mdt/fields/Eversign_Document_Field_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Eversign_Document_Field_Identifier__c</fullName>
    <label>Eversign Document Field Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>