force-app/main/default/objects/Eversign_Document_Field_Mapping__mdt/fields/Saleforce_Reference__c.field-meta.xml
<CustomField>
    <fullName>Saleforce_Reference__c</fullName>
    <label>Saleforce Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>