force-app/main/default/objects/Eversign_Document_Field_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Role</fullName>
                <default>true</default>
                <label>Role</label>
            </value>
            <value>
                <fullName>Object Field</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>